movies-deployment/api-v1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-api
  labels:
    deployment: movies-api
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: movies-api
  template:
    metadata:
      labels:
        pod: movies-api
    spec:
      containers:
        - name: movies-api
          image: passporter/movies-api:latest
          imagePullPolicy: Always
          workingDir: /usr/src/app
          command: ['node', '.']
          ports:
            - containerPort: 3000
