movies-deployment/api-v1/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: movies-api-service
spec:
  selector:
    pod: movies-api
  ports:
  - name: http
    port: 80
    targetPort: 3000
  - name: https
    port: 443
    targetPort: 3000
  type: LoadBalancer
