movies-deployment/api-v1/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: movies-ingress
spec:
  backend:
    serviceName: movies-api-service
    servicePort: 3000
